--- a/notebooks/scrap.ipynb
+++ b/notebooks/scrap.ipynb
@@ -244,7 +244,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "chesshacks-training (3.14.0)",
    "language": "python",
    "name": "python3"
   },
@@ -258,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
