--- a/notebooks/eval.ipynb
+++ b/notebooks/eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "2705fec7",
    "metadata": {},
    "outputs": [],
@@ -11,15 +11,52 @@
     "import chess.engine\n",
     "import math\n",
     "from typing import List\n",
-    "\n",
-    "def estimate_elo(score: float, baseline_elo: int) -> float:\n",
-    "    score = max(0.01, min(0.99, score))\n",
-    "    return baseline_elo + 400 * math.log10(score / (1 - score))\n"
+    "import torch\n",
+    "import time\n",
+    "import random\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1c63f727",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "sys.path.append(str(Path.cwd() / \"..\" / \"src\"))\n",
+    "from mcts import Node, Edge, MCTS\n",
+    "from model_wrapper import ModelWrapper\n",
+    "from leela_cnn import LeelaCNN, board_to_tensor\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import animation\n",
+    "import matplotlib.patches as patches"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "36664977",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# init logic\n",
+    "model_name = \"leela_cnn.pth\"\n",
+    "model_path = \"../models/\" + model_name\n",
+    "model = LeelaCNN(10, 128)\n",
+    "model.load_state_dict(torch.load(model_path, weights_only=True))\n",
+    "\n",
+    "# wrap the model\n",
+    "wrapped_model = ModelWrapper(model)\n",
+    "\n",
+    "# create mcts with the model \n",
+    "mcts = MCTS(wrapped_model)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "ce0b4a2f",
    "metadata": {},
    "outputs": [],
@@ -29,14 +66,14 @@
     "BOT_SKILL_LEVEL = 2       # <<< YOU SET THIS (0–20)\n",
     "\n",
     "BOT_TIME = 0.001\n",
-    "ORACLE_TIME = 0.005\n",
+    "ORACLE_TIME = 0.001\n",
     "\n",
     "bot_engine = None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "a82a4880",
    "metadata": {},
    "outputs": [],
@@ -68,15 +105,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a2337527",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def estimate_elo(score: float, baseline_elo: int) -> float:\n",
+    "    score = max(0.01, min(0.99, score))\n",
+    "    return baseline_elo + 400 * math.log10(score / (1 - score))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "05826726",
    "metadata": {},
    "outputs": [],
@@ -95,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "b4655862",
    "metadata": {},
    "outputs": [],
@@ -104,36 +145,40 @@
     "    global bot_engine\n",
     "    if bot_engine is None:\n",
     "        bot_engine = chess.engine.SimpleEngine.popen_uci(BOT_STOCKFISH_PATH)\n",
-    "\n",
-    "\n",
-    "def my_bot_move(board: chess.Board) -> chess.Move:\n",
-    "    configure_bot_engine()\n",
-    "    limit = configure_engine_skill(bot_engine, BOT_TIME, BOT_SKILL_LEVEL)\n",
-    "    result = bot_engine.play(board, limit)\n",
-    "    return result.move\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "5ae3cb75",
+   "execution_count": 9,
+   "id": "4a8b9a79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def my_bot_move(board: chess.Board) -> chess.Move:\n",
-    "#     \"\"\"\n",
-    "#     RETURN A LEGAL MOVE FOR YOUR BOT.\n",
     "\n",
-    "#     Replace the contents of this function with your bot's logic.\n",
-    "#     Right now it's just a random-move bot.\n",
-    "#     \"\"\"\n",
-    "#     moves = list(board.legal_moves)\n",
-    "#     return random.choice(moves)\n"
+    "# def my_bot_move(board: chess.Board) -> chess.Move:\n",
+    "#     configure_bot_engine()\n",
+    "#     limit = configure_engine_skill(bot_engine, BOT_TIME, BOT_SKILL_LEVEL)\n",
+    "#     result = bot_engine.play(board, limit)\n",
+    "#     return result.move"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "id": "0514eefb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_bot_move(board: chess.Board) -> chess.Move:\n",
+    "    ponder_time = int(BOT_TIME * 1e9)\n",
+    "    move = mcts.ponder_time(board=board, time_ns=ponder_time)\n",
+    "    return move\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "0fb20349",
    "metadata": {},
    "outputs": [],
@@ -175,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "e69a5f3e",
    "metadata": {},
    "outputs": [],
@@ -261,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "ee6104fd",
    "metadata": {},
    "outputs": [
@@ -273,37 +318,34 @@
       "\n",
       "=== Testing vs Skill 4 (≈ 1953 Elo) ===\n",
       "Progress: [####################] 20/20\n",
-      "Skill 4 result: score=0.175 → est Elo=1683.6\n",
+      "SKIPPED — score=0.000 (uninformative)\n",
       "\n",
       "=== Testing vs Skill 5 (≈ 2197 Elo) ===\n",
       "Progress: [####################] 20/20\n",
-      "Skill 5 result: score=0.125 → est Elo=1859.0\n",
+      "SKIPPED — score=0.000 (uninformative)\n",
       "\n",
       "=== Testing vs Skill 6 (≈ 2383 Elo) ===\n",
       "Progress: [####################] 20/20\n",
-      "Skill 6 result: score=0.150 → est Elo=2081.7\n",
+      "SKIPPED — score=0.000 (uninformative)\n",
       "\n",
       "=== Testing vs Skill 7 (≈ 2518 Elo) ===\n",
       "Progress: [####################] 20/20\n",
-      "Skill 7 result: score=0.125 → est Elo=2180.0\n",
+      "SKIPPED — score=0.000 (uninformative)\n",
       "\n",
       "=== Testing vs Skill 8 (≈ 2624 Elo) ===\n",
       "Progress: [####################] 20/20\n",
-      "Skill 8 result: score=0.050 → est Elo=2112.5\n",
+      "SKIPPED — score=0.000 (uninformative)\n",
       "\n",
       "=== Testing vs Skill 9 (≈ 2711 Elo) ===\n",
       "Progress: [####################] 20/20\n",
-      "Skill 9 result: score=0.050 → est Elo=2199.5\n",
+      "SKIPPED — score=0.000 (uninformative)\n",
       "\n",
       "=== Testing vs Skill 10 (≈ 2786 Elo) ===\n",
       "Progress: [####################] 20/20\n",
-      "Skill 10 result: score=0.050 → est Elo=2274.5\n",
+      "SKIPPED — score=0.000 (uninformative)\n",
       "\n",
       "==============================\n",
-      "Bot Skill Level: 2\n",
-      "Used baseline skills: [4, 5, 6, 7, 8, 9, 10]\n",
-      "Estimated Bot Elo: 2055.8\n",
-      "==============================\n"
+      "No informative baselines. Cannot estimate Elo.\n"
      ]
     }
    ],
