--- a/notebooks/eval.ipynb
+++ b/notebooks/eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "2705fec7",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "1c63f727",
    "metadata": {},
    "outputs": [],
@@ -36,16 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "36664977",
    "metadata": {},
    "outputs": [],
    "source": [
     "# init logic\n",
-    "model_name = \"leela_cnn.pth\"\n",
-    "model_path = \"../models/\" + model_name\n",
+    "model_name = \"checkpoint_25000_20251115_222047.pth\"\n",
+    "model_path = \"\" + model_name\n",
     "model = LeelaCNN(10, 128)\n",
-    "model.load_state_dict(torch.load(model_path, weights_only=True))\n",
+    "model.load_state_dict(torch.load(model_path, weights_only=True, map_location=torch.device('mps')))\n",
     "\n",
     "# wrap the model\n",
     "wrapped_model = ModelWrapper(model)\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "ce0b4a2f",
    "metadata": {},
    "outputs": [],
@@ -65,15 +65,15 @@
     "\n",
     "BOT_SKILL_LEVEL = 2       # <<< YOU SET THIS (0–20)\n",
     "\n",
-    "BOT_TIME = 0.001\n",
-    "ORACLE_TIME = 0.001\n",
+    "BOT_TIME = 0.1\n",
+    "ORACLE_TIME = 0.00000001\n",
     "\n",
     "bot_engine = None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "a82a4880",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "a2337527",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "05826726",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "b4655862",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "4a8b9a79",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "0514eefb",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "0fb20349",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "e69a5f3e",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "ee6104fd",
    "metadata": {},
    "outputs": [
@@ -314,34 +314,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimated running time: 22.40 seconds\n",
+      "Estimated running time: 120.00 seconds\n",
       "\n",
-      "=== Testing vs Skill 4 (≈ 1953 Elo) ===\n",
-      "Progress: [####################] 20/20\n",
+      "=== Testing vs Skill 0 (≈ 1347 Elo) ===\n",
+      "Progress: [####################] 5/5\n",
       "SKIPPED — score=0.000 (uninformative)\n",
       "\n",
-      "=== Testing vs Skill 5 (≈ 2197 Elo) ===\n",
-      "Progress: [####################] 20/20\n",
+      "=== Testing vs Skill 1 (≈ 1444 Elo) ===\n",
+      "Progress: [####################] 5/5\n",
       "SKIPPED — score=0.000 (uninformative)\n",
       "\n",
-      "=== Testing vs Skill 6 (≈ 2383 Elo) ===\n",
-      "Progress: [####################] 20/20\n",
-      "SKIPPED — score=0.000 (uninformative)\n",
-      "\n",
-      "=== Testing vs Skill 7 (≈ 2518 Elo) ===\n",
-      "Progress: [####################] 20/20\n",
-      "SKIPPED — score=0.000 (uninformative)\n",
-      "\n",
-      "=== Testing vs Skill 8 (≈ 2624 Elo) ===\n",
-      "Progress: [####################] 20/20\n",
-      "SKIPPED — score=0.000 (uninformative)\n",
-      "\n",
-      "=== Testing vs Skill 9 (≈ 2711 Elo) ===\n",
-      "Progress: [####################] 20/20\n",
-      "SKIPPED — score=0.000 (uninformative)\n",
-      "\n",
-      "=== Testing vs Skill 10 (≈ 2786 Elo) ===\n",
-      "Progress: [####################] 20/20\n",
+      "=== Testing vs Skill 2 (≈ 1566 Elo) ===\n",
+      "Progress: [####################] 5/5\n",
       "SKIPPED — score=0.000 (uninformative)\n",
       "\n",
       "==============================\n",
@@ -352,9 +336,9 @@
    "source": [
     "estimated = run_skill_baseline_experiment(\n",
     "    engine_path=BOT_STOCKFISH_PATH,\n",
-    "    games_per_baseline=20,\n",
-    "    skills_lower=4,\n",
-    "    skills_upper=10\n",
+    "    games_per_baseline=5,\n",
+    "    skills_lower=0,\n",
+    "    skills_upper=2\n",
     ")\n"
    ]
   },
