save load multiple files

--- a/notebooks/bob_scrap.ipynb
+++ b/notebooks/bob_scrap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "id": "a3d528d7",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "id": "47e47b42",
    "metadata": {},
    "outputs": [],
@@ -42,19 +42,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "id": "aada0d4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LeelaCNN(10, 128)\n",
-    "torch.save(model.state_dict(), \"leela_cnn.pth\")"
+    "og_model = LeelaCNN(10, 128)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "cbf65584",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "def save_split_state_dict(model, out_dir, max_file_size=10 * 1024**2):\n",
+    "    os.makedirs(out_dir, exist_ok=True)\n",
+    "\n",
+    "    state_dict = model.state_dict()\n",
+    "    current_chunk = {}\n",
+    "    current_size = 0\n",
+    "    chunk_idx = 0\n",
+    "\n",
+    "    for key, tensor in state_dict.items():\n",
+    "        tensor_bytes = tensor.numel() * tensor.element_size()\n",
+    "\n",
+    "        # If adding this tensor exceeds chunk limit, save current chunk\n",
+    "        if current_size + tensor_bytes > max_file_size:\n",
+    "            torch.save(current_chunk, f\"{out_dir}/chunk_{chunk_idx}.pt\")\n",
+    "            chunk_idx += 1\n",
+    "            current_chunk = {}\n",
+    "            current_size = 0\n",
+    "\n",
+    "        current_chunk[key] = tensor\n",
+    "        current_size += tensor_bytes\n",
+    "\n",
+    "    # Save the final chunk\n",
+    "    if current_chunk:\n",
+    "        torch.save(current_chunk, f\"{out_dir}/chunk_{chunk_idx}.pt\")\n",
+    "\n",
+    "\n",
+    "def load_split_state_dict(model, split_dir):\n",
+    "    chunks = sorted(glob.glob(f\"{split_dir}/chunk_*.pt\"))\n",
+    "\n",
+    "    merged = {}\n",
+    "    for path in chunks:\n",
+    "        part = torch.load(path, map_location=\"cpu\")\n",
+    "        merged.update(part)\n",
+    "\n",
+    "    model.load_state_dict(merged)\n",
+    "    return model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1372fad9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_split_state_dict(og_model, out_dir=\"models/leela_split_checkpoint\", max_file_size=10 * 1024**2)\n",
+    "model = load_split_state_dict(LeelaCNN(10, 128), split_dir=\"models/leela_split_checkpoint\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "6614a36e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if the two models are equal\n",
+    "for p1, p2 in zip(og_model.parameters(), model.parameters()):\n",
+    "    assert torch.equal(p1, p2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbf65584",
+   "id": "173a4b5c",
    "metadata": {},
    "outputs": [],
    "source": []
