--- a/notebooks/eval_against.ipynb
+++ b/notebooks/eval_against.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "id": "2705fec7",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "id": "1c63f727",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "id": "163f9c11",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "id": "36664977",
    "metadata": {},
    "outputs": [],
@@ -65,12 +65,12 @@
     "wrapped_model = ModelWrapper(model)\n",
     "\n",
     "# create mcts with the model \n",
-    "mcts1 = MCTS(wrapped_model, c_puct=float64(1.0))\n"
+    "mcts1 = MCTS(wrapped_model, c_puct=float64(30.0))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "id": "c573cd7f",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "id": "b6014168",
    "metadata": {},
    "outputs": [],
@@ -129,23 +129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "id": "0514eefb",
    "metadata": {},
    "outputs": [],
    "source": [
     "def my_bot_move_1(board: chess.Board) -> chess.Move:\n",
     "    ponder_time = int(BOT_TIME_1 * 1e9)\n",
-    "    move = mcts1.ponder_time(board=board, time_ns=ponder_time)\n",
+    "    move = mcts1.ponder_time(board=board, ponder_time_ns=ponder_time)\n",
     "    # check if endgame, then move randomly\n",
-    "    if is_near_endgame(board):\n",
-    "        return random.choice(list(board.legal_moves))\n",
+    "    # if is_near_endgame(board):\n",
+    "    #     return random.choice(list(board.legal_moves))\n",
     "    return move\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "id": "1d92c0c5",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "id": "e69a5f3e",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 30,
    "id": "ee6104fd",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
      "output_type": "stream",
      "text": [
       "Starting game 1\n",
-      "Game 1 result: 0.5\n",
+      "Game 1 result: 0.0\n",
       "Starting game 2\n",
       "Game 2 result: 0.0\n",
       "Starting game 3\n",
@@ -228,18 +228,18 @@
       "Starting game 4\n",
       "Game 4 result: 0.5\n",
       "Starting game 5\n",
-      "Game 5 result: 0.0\n",
+      "Game 5 result: 0.5\n",
       "Starting game 6\n",
-      "Game 6 result: 0.0\n",
+      "Game 6 result: 0.5\n",
       "Starting game 7\n",
       "Game 7 result: 0.0\n",
       "Starting game 8\n",
-      "Game 8 result: 0.5\n",
+      "Game 8 result: 0.0\n",
       "Starting game 9\n",
-      "Game 9 result: 0.5\n",
+      "Game 9 result: 0.0\n",
       "Starting game 10\n",
       "Game 10 result: 0.5\n",
-      "Bot 1 wins: 0, Bot 2 wins: 5, Ties: 5\n"
+      "Bot 1 wins: 0, Bot 2 wins: 6, Ties: 4\n"
      ]
     },
     {
@@ -248,7 +248,7 @@
        "0.0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,6 +263,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c2874caa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bee8302",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dd3c4a4",
    "metadata": {},
    "outputs": [],
    "source": []
